<resources>
    <string name="app_name">myDropbox</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_splash">Splash</string>
    <string name="splash_title">splashTitle</string>
    <string name="login">login</string>
    <string name="login_to_dropbox">Login to Dropbox</string>
    <string name="bg_view">backgroundView</string>
    <string name="icon">icon</string>
    <string name="app_key">niad4350slv80f2</string>
    <string name="app_secret">cd9mcpczk8a5w7z</string>
    <string name="account_prefs_name">prefs</string>
    <string name="access_key">ACCESS_KEY</string>
    <string name="access_secret">ACCESS_SECRET</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="photo_dir">/Photos/</string>
    <string name="facebook_app_id">785464321567466</string>
    <string name="title_activity_view_file">ViewFileActivity</string>
    <string name="picture">picture</string>
    <string name="gmaps_apikey">AIzaSyCEb_gIFVqSXjZs28cBYPJek0iwCipITsE</string>
    <string name="title_activity_tabbed">TabbedActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_on_map">Map view</string>
    <string name="log_out">Log out</string>
    <string name="check_connection">Ensure that you have connection to the internet and try again.</string>
    <string name="something_went_wrong">Something went wrong...</string>
    <string name="share">Share</string>
</resources>
