<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mobiquity.com.mydropox.activities.LoginActivity"
    >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bg_view"
        android:transitionName="@string/bg_view"
        android:layout_centerHorizontal="true"
        android:background="@color/blue"
        android:layout_alignParentTop="true" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/icon"
        android:transitionName="@string/icon"
        android:src="@drawable/drop_icon_white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="206dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/splash_title"
        android:textColor="@android:color/white"
        android:transitionName="@string/splash_title"
        android:layout_alignBottom="@+id/icon"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:transitionName="@string/login"
        android:textColor="@color/white"
        android:text="@string/login_to_dropbox"
        android:background="@drawable/ripple_blue_rectangle"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:onClick="loginButtonOnClick" />

</RelativeLayout>
