<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mobiquity.com.mydropox.activities.LoginActivity"
    >


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="3dp"
        android:id="@+id/bg_view"
        android:transitionName="@string/bg_view"
        android:layout_centerHorizontal="true"
        android:background="@color/blue"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/title_text"
        android:text="@string/app_name"
        android:elevation="4dp"
        android:transitionName="@string/splash_title"
        android:layout_toRightOf="@+id/icon"
        android:layout_toEndOf="@+id/icon"
        android:gravity="center_vertical"
        android:layout_alignBottom="@+id/bg_view"
        android:textColor="@android:color/white" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/icon"
        android:elevation="3dp"
        android:transitionName="@string/icon"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/bg_view" />



    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/action_button"
        android:transitionName="@string/login"
        android:textColor="@color/white"
        android:text="@string/login_to_dropbox"
        android:onClick="takePictureListener"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:background="@drawable/ripple_blue_circle"
        android:src="@drawable/ripple_blue_circle"
        android:elevation="5dp"
         />


    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gridView"
        android:numColumns="3"
        android:background="@color/gray"
        android:layout_below="@+id/bg_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />


    <ProgressBar
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:visibility="visible"
        android:id="@+id/progressbar"
        android:layout_centerInParent="true"
        android:indeterminate="true"/>

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        class="com.google.android.gms.maps.MapFragment" />


</RelativeLayout>
