<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="mobiquity.com.mydropox.activities.ViewFileActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_centerInParent="true"
        android:transitionName="@string/picture"
        android:id="@+id/picture" />

    <com.facebook.share.widget.ShareButton
        android:id="@+id/shareButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/share"
        android:transitionName="@string/login"
        android:background="@android:color/transparent"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:onClick="sharePicture" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/location"
        android:textColor="@android:color/white"
        android:layout_alignBottom="@+id/shareButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/shareButton"
        android:gravity="center_vertical"
        android:padding="10dp" />


</RelativeLayout>
